@@ -29,12 +29,8 @@ import javafx.event.Event;
 import javafx.event.EventHandler;
 
 import org.jacp.api.action.IAction;
-import org.jacp.api.annotations.OnStart;
-import org.jacp.api.annotations.OnTearDown;
 import org.jacp.api.component.ICallbackComponent;
 import org.jacp.api.component.ISubComponent;
-import org.jacp.javafx.rcp.util.Checkable;
-import org.jacp.javafx.rcp.util.FXUtil;
 
 /**
  * This class handles running stateful background components
@@ -62,7 +58,7 @@ public class StateComponentRunWorker
 		synchronized (this.component) {
 			this.component.lock();
 			try {
-				runOnStart(this.component);
+				runCallbackOnStartMethods(this.component);
 				while (this.component.hasIncomingMessage()) {
 					final IAction<Event, Object> myAction = this.component
 							.getNextIncomingMessage();
@@ -77,7 +73,8 @@ public class StateComponentRunWorker
 					this.checkAndHandleTargetChange(this.component,
 							targetCurrent);
 				}
-				postHandling(component);
+				runCallbackPostExecution(this.component);
+				runCallbackOnTeardownMethods(this.component);
 			} finally {
 				this.component.release();
 			}
@@ -85,32 +82,7 @@ public class StateComponentRunWorker
 		return this.component;
 	}
 	
-	/**
-	 * checks if component started, if so run OnStart annotations
-	 * @param component
-	 */
-	private void runOnStart(final ICallbackComponent<EventHandler<Event>, Event, Object> component) {
-		if (!component.isStarted())
-			FXUtil.invokeHandleMethodsByAnnotation(OnStart.class,
-					component);
-	}
-	/**
-	 * checks if component was deactivated, if so run OnTeardown annotations. If not set component activeted.
-	 * @param component
-	 */
-	private void postHandling(final ICallbackComponent<EventHandler<Event>, Event, Object> component) {
-		if (!component.isStarted())
-			FXUtil.setPrivateMemberValue(Checkable.class,
-					component, FXUtil.ACOMPONENT_STARTED, true);
-		// turn off component
-		if (!component.isActive()) {
-			FXUtil.setPrivateMemberValue(Checkable.class,
-					component, FXUtil.ACOMPONENT_STARTED, false);
-			// run teardown
-			FXUtil.invokeHandleMethodsByAnnotation(OnTearDown.class,
-					component);
-		}
-	}
+	
 
 	/**
 	 * check if target has changed
