@@ -1,3 +1,4 @@
+11. Dez. 2012 - amo -  StateLessComponentRunWorker handle OnStart annotation, set component to started after init.
 11. Dez. 2012 - amo -  StateComponentRunWorker create postHandle method for Teardown and moved execution to worker thread. OnStart and OnTeardown are now executed in worker.
 11. Dez. 2012 - amo -  FXComponentInitWorker: moved runPreInitMethods from constructor to call method, to prevent excecution outside appThread RunInvokeLater is used, this should avoid synchronisation twice AND the method will be called AFTER component lock was called
 10. Dez. 2012 - amo -  added TearDownHandler to execute all @TearDown annotations when application is closed, updated AFXWorkbench to use TearDownHandler
